@@ -1,4 +1,4 @@
-// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
+// Copyright 2004-2011 Castle Project - http://www.castleproject.org/
 // 
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -12,13 +12,13 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-namespace Castle.MicroKernel.Tests.Registration
+namespace CastleTests.Registration
 {
 	using System.Linq;
 
+	using Castle.MicroKernel;
 	using Castle.MicroKernel.Registration;
 	using Castle.MicroKernel.Tests.ClassComponents;
-	using Castle.Windsor.Tests;
 	using Castle.Windsor.Tests.ClassComponents;
 
 	using CastleTests;
@@ -32,7 +32,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		[Test]
 		public void AllInterfaces_uses_all_implemented_interfaces()
 		{
-			Kernel.Register(AllTypes.FromThisAssembly().Where(t => t == typeof(TwoInterfacesImpl)).WithService.AllInterfaces());
+			Kernel.Register(Classes.FromThisAssembly().Where(t => t == typeof(TwoInterfacesImpl)).WithService.AllInterfaces());
 			var services = Kernel.GetAssignableHandlers(typeof(object)).Single().Services.ToArray();
 			Assert.AreEqual(2, services.Length);
 			Assert.True(services.Any(s => s == typeof(ICommon)));
@@ -42,7 +42,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		[Test]
 		public void AllInterfaces_uses_single_interface()
 		{
-			Kernel.Register(AllTypes.FromThisAssembly().Where(t => t == typeof(CommonImpl1)).WithService.AllInterfaces());
+			Kernel.Register(Classes.FromThisAssembly().Where(t => t == typeof(CommonImpl1)).WithService.AllInterfaces());
 			var handler = Kernel.GetAssignableHandlers(typeof(object)).Single();
 			Assert.AreEqual(typeof(ICommon), handler.Services.Single());
 		}
@@ -50,7 +50,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		[Test]
 		public void AllTypes_not_specified_uses_service_itself()
 		{
-			Kernel.Register(AllTypes.FromThisAssembly().Where(t => t == typeof(CommonImpl1)));
+			Kernel.Register(Classes.FromThisAssembly().Where(t => t == typeof(CommonImpl1)));
 			var handler = Kernel.GetAssignableHandlers(typeof(object)).Single();
 			Assert.AreEqual(typeof(CommonImpl1), handler.Services.Single());
 		}
@@ -59,7 +59,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		public void Base_uses_both_types_from_BasedOn_if_implemented_generically_twice()
 		{
 			// NOTE: This scenario should be tested for not just Base, but also other methods as well?
-			Kernel.Register(AllTypes.FromThisAssembly().BasedOn(typeof(ISimpleGeneric<>)).WithService.Base());
+			Kernel.Register(Classes.FromThisAssembly().BasedOn(typeof(ISimpleGeneric<>)).WithService.Base());
 
 			var allHandlers = Kernel.GetAssignableHandlers(typeof(object));
 			var aHandlers = Kernel.GetAssignableHandlers(typeof(ISimpleGeneric<A>));
@@ -74,7 +74,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		[Test]
 		public void Base_uses_type_from_BasedOn()
 		{
-			Kernel.Register(AllTypes.FromThisAssembly().BasedOn<ICommon>().WithService.Base());
+			Kernel.Register(Classes.FromThisAssembly().BasedOn<ICommon>().WithService.Base());
 
 			var handlers = Kernel.GetAssignableHandlers(typeof(object));
 
@@ -85,7 +85,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		[Test]
 		public void Can_cumulate_services()
 		{
-			Kernel.Register(AllTypes.FromThisAssembly().Where(t => t == typeof(TwoInterfacesImpl))
+			Kernel.Register(Classes.FromThisAssembly().Where(t => t == typeof(TwoInterfacesImpl))
 			                	.WithService.AllInterfaces()
 			                	.WithService.Self());
 			var services = Kernel.GetAssignableHandlers(typeof(object)).Single().Services.ToArray();
@@ -98,7 +98,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		[Test]
 		public void Can_cumulate_services_without_duplication()
 		{
-			Kernel.Register(AllTypes.FromThisAssembly().Where(t => t == typeof(TwoInterfacesImpl))
+			Kernel.Register(Classes.FromThisAssembly().Where(t => t == typeof(TwoInterfacesImpl))
 			                	.WithService.AllInterfaces()
 			                	.WithService.FirstInterface());
 			var handlers = Kernel.GetAssignableHandlers(typeof(object));
@@ -119,7 +119,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		[Test]
 		public void DefaultInterface_can_match_multiple_types()
 		{
-			Kernel.Register(AllTypes.FromThisAssembly().Where(t => t == typeof(CommonSub1Impl)).WithService.DefaultInterfaces());
+			Kernel.Register(Classes.FromThisAssembly().Where(t => t == typeof(CommonSub1Impl)).WithService.DefaultInterfaces());
 			var one = Kernel.Resolve<ICommon>();
 			var two = Kernel.Resolve<ICommonSub1>();
 			Assert.AreSame(one, two);
@@ -128,7 +128,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		[Test]
 		public void DefaultInterface_ignores_not_matched_interfaces()
 		{
-			Kernel.Register(AllTypes.FromThisAssembly().Where(t => t == typeof(CommonSub2Impl)).WithService.DefaultInterfaces());
+			Kernel.Register(Classes.FromThisAssembly().Where(t => t == typeof(CommonSub2Impl)).WithService.DefaultInterfaces());
 
 			var one = Kernel.Resolve<ICommon>();
 			var two = Kernel.Resolve<ICommonSub2>();
@@ -140,7 +140,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		[Test]
 		public void DefaultInterface_ignores_on_no_interface_matched()
 		{
-			Kernel.Register(AllTypes.FromThisAssembly().Where(t => t == typeof(TwoInterfacesImpl)).WithService.DefaultInterfaces());
+			Kernel.Register(Classes.FromThisAssembly().Where(t => t == typeof(TwoInterfacesImpl)).WithService.DefaultInterfaces());
 			var handler = Kernel.GetAssignableHandlers(typeof(object)).Single();
 			Assert.AreEqual(typeof(TwoInterfacesImpl), handler.Services.Single());
 		}
@@ -148,7 +148,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		[Test]
 		public void DefaultInterface_matches_by_type_name()
 		{
-			Kernel.Register(AllTypes.FromThisAssembly().Where(t => t == typeof(CommonImpl1)).WithService.DefaultInterfaces());
+			Kernel.Register(Classes.FromThisAssembly().Where(t => t == typeof(CommonImpl1)).WithService.DefaultInterfaces());
 			var handler = Kernel.GetAssignableHandlers(typeof(object)).Single();
 			Assert.AreEqual(typeof(ICommon), handler.Services.Single());
 		}
@@ -156,7 +156,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		[Test]
 		public void FirstInterface_uses_single_interface()
 		{
-			Kernel.Register(AllTypes.FromThisAssembly().Where(t => t == typeof(CommonImpl1)).WithService.FirstInterface());
+			Kernel.Register(Classes.FromThisAssembly().Where(t => t == typeof(CommonImpl1)).WithService.FirstInterface());
 			var handler = Kernel.GetAssignableHandlers(typeof(object)).Single();
 			Assert.AreEqual(typeof(ICommon), handler.Services.Single());
 		}
@@ -164,7 +164,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		[Test]
 		public void FromInterface_uses_subtypes_of_type_from_BasedOn_but_not_the_type_itself()
 		{
-			Kernel.Register(AllTypes.FromThisAssembly().BasedOn<ICommon>().WithService.FromInterface());
+			Kernel.Register(Classes.FromThisAssembly().BasedOn<ICommon>().WithService.FromInterface());
 
 			var handlers = Kernel.GetAssignableHandlers(typeof(object));
 
@@ -176,7 +176,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		[Test]
 		public void Self_uses_service_itself()
 		{
-			Kernel.Register(AllTypes.FromThisAssembly().Where(t => t == typeof(CommonImpl1)).WithService.Self());
+			Kernel.Register(Classes.FromThisAssembly().Where(t => t == typeof(CommonImpl1)).WithService.Self());
 			var handler = Kernel.GetAssignableHandlers(typeof(object)).Single();
 			Assert.AreEqual(typeof(CommonImpl1), handler.Services.Single());
 		}
