@@ -22,7 +22,7 @@ namespace Castle.MicroKernel.Registration
 	/// <summary>
 	///   Describes a related group of components to register in the kernel.
 	/// </summary>
-	[Obsolete("Use AllTypes.From()... or AllTypes.FromAssembly() instead.")]
+	[Obsolete("Use Classes.From()... or Classes.FromAssembly() instead.")]
 	[EditorBrowsable(EditorBrowsableState.Never)]
 	public class AllTypesOf
 	{
@@ -38,7 +38,7 @@ namespace Castle.MicroKernel.Registration
 		/// </summary>
 		/// <param name = "types">The list of types.</param>
 		/// <returns>The corresponding <see cref = "BasedOnDescriptor" /></returns>
-		[Obsolete("Use AllTypes.From(types).BasedOn(baseType)... instead.")]
+		[Obsolete("Use Classes.From(types).BasedOn(baseType)... instead.")]
 		[EditorBrowsable(EditorBrowsableState.Never)]
 		public BasedOnDescriptor From(IEnumerable<Type> types)
 		{
@@ -50,7 +50,7 @@ namespace Castle.MicroKernel.Registration
 		/// </summary>
 		/// <param name = "types">The list of types.</param>
 		/// <returns>The corresponding <see cref = "BasedOnDescriptor" /></returns>
-		[Obsolete("Use AllTypes.From(types).BasedOn(baseType)... instead.")]
+		[Obsolete("Use Classes.From(types).BasedOn(baseType)... instead.")]
 		[EditorBrowsable(EditorBrowsableState.Never)]
 		public BasedOnDescriptor From(params Type[] types)
 		{
@@ -62,7 +62,7 @@ namespace Castle.MicroKernel.Registration
 		/// </summary>
 		/// <param name = "assembly">The assembly.</param>
 		/// <returns>The corresponding <see cref = "BasedOnDescriptor" /></returns>
-		[Obsolete("Use AllTypes.FromAssembly(assembly).BasedOn(baseType)... instead.")]
+		[Obsolete("Use Classes.FromAssembly(assembly).BasedOn(baseType)... instead.")]
 		[EditorBrowsable(EditorBrowsableState.Never)]
 		public BasedOnDescriptor FromAssembly(Assembly assembly)
 		{
@@ -74,7 +74,7 @@ namespace Castle.MicroKernel.Registration
 		/// </summary>
 		/// <param name = "assemblyName">The assembly name.</param>
 		/// <returns>The corresponding <see cref = "BasedOnDescriptor" /></returns>
-		[Obsolete("Use AllTypes.FromAssemblyNamed(assemblyName).BasedOn(baseType)... instead.")]
+		[Obsolete("Use Classes.FromAssemblyNamed(assemblyName).BasedOn(baseType)... instead.")]
 		[EditorBrowsable(EditorBrowsableState.Never)]
 		public BasedOnDescriptor FromAssemblyNamed(string assemblyName)
 		{
@@ -86,7 +86,7 @@ namespace Castle.MicroKernel.Registration
 		/// </summary>
 		/// <param name = "types">The list of types.</param>
 		/// <returns>The corresponding <see cref = "BasedOnDescriptor" /></returns>
-		[Obsolete("Use AllTypes.FromAssemblyNamed(assemblyName).Pick()... instead.")]
+		[Obsolete("Use Classes.FromAssemblyNamed(assemblyName).Pick()... instead.")]
 		[EditorBrowsable(EditorBrowsableState.Never)]
 		public BasedOnDescriptor Pick(IEnumerable<Type> types)
 		{
