@@ -64,7 +64,7 @@ namespace Castle.MicroKernel.Registration
 		/// </summary>
 		/// <typeparam name = "T">The base type.</typeparam>
 		/// <returns>The descriptor for the type.</returns>
-		[Obsolete("Calling this method resets registration. If that's what you want, start anew, with AllTypes...")]
+		[Obsolete("Calling this method resets registration. If that's what you want, start anew, with Classes.FromAssembly..")]
 		[EditorBrowsable(EditorBrowsableState.Never)]
 		public BasedOnDescriptor BasedOn<T>()
 		{
@@ -76,7 +76,7 @@ namespace Castle.MicroKernel.Registration
 		/// </summary>
 		/// <param name = "basedOn">The base type.</param>
 		/// <returns>The descriptor for the type.</returns>
-		[Obsolete("Calling this method resets registration. If that's what you want, start anew, with AllTypes...")]
+		[Obsolete("Calling this method resets registration. If that's what you want, start anew, with Classes.FromAssembly...")]
 		[EditorBrowsable(EditorBrowsableState.Never)]
 		public BasedOnDescriptor BasedOn(Type basedOn)
 		{
@@ -162,7 +162,7 @@ namespace Castle.MicroKernel.Registration
 		/// </summary>
 		/// <param name = "accepted">The accepting condition.</param>
 		/// <returns>The descriptor for the type.</returns>
-		[Obsolete("Calling this method resets registration. If that's what you want, start anew, with AllTypes...")]
+		[Obsolete("Calling this method resets registration. If that's what you want, start anew, with Classes.FromAssembly...")]
 		[EditorBrowsable(EditorBrowsableState.Never)]
 		public BasedOnDescriptor Where(Predicate<Type> accepted)
 		{
